<resources>
    <string name="app_name">ChatRadar</string>
    <string name="error_title">Ingrese nombre del cliente</string>
    <string name="error_tag_text">Ingrese texto</string>
    <string name="enter_first_name">Nombre</string>
    <string name="enter_last_name">Apellido</string>
    <string name="enter_job_title">Nombre del establecimiento</string>
    <string name="enter_email">Correo</string>
    <string name="invalid_email">Agrega un correo correcto</string>
    <string name="password">Contraseñas</string>
    <string name="enter_password">Agrega una contraseñas correcta</string>
    <string name="invalid_password">Tu contraseña debe ser mayor 8 caracteres</string>
    <string name="logout">Cerrar sesion</string>
    <string name="noteListingFragment">Notas</string>
    <string name="taskListingFragment">Notas</string>
    <string name="notes">Comandas</string>
    <string name="tasks">Notas</string>
    <string name="home_fragment">Inicio</string>
    <string name="create_task">Crear comanda</string>
    <string name="create">Crear</string>
    <string name="done">Terminar</string>
    <string name="error_task_detail">Falta el detalle de la tarea</string>
    <string name="add_new_note">Agregar un pedido</string>
    <string name="name_user">Pedido de: %s</string>
    <string name="customer_name">Nombre del cliente</string>
    <string name="last_modified">Hora de creación del pedido</string>
    <string name="pizza_small">Chica</string>
    <string name="pizza_medium">Mediana</string>
    <string name="pizza_big">Grande</string>
    <string name="select_pizza">Selecciona un pizza</string>
    <string name="all_notes">Todas tus comandas</string>
    <string name="select_count_of_pizza">Cuantas pizzas</string>
    <string name="select_type_ingredient">Secciona un ingrediente pizzas</string>
    <string name="phone">Numero de teléfono (Opcional)</string>
    <string name="description">Descripción (Opcional)</string>
    <string name="add_a_correct_phone_number">Agrega un numero de teléfono correcto</string>
    <string name="little">Chica</string>
    <string name="medium">Mediana</string>
    <string name="big">Grande</string>
    <string name="btn_acept">Aceptar</string>
    <string name="something_wrong_content">Por favor, vuelve a intentarlo</string>
    <string name="something_wrong"><b>¡Ups, algo salió mal!</b></string>
    <string name="list_order">Lista de pedidos</string>
    <string name="title_alert_add_order">Es tiempo de agregar un nuevo pedido.</string>
    <string name="denied_permission_phone">Permiso denegado, Activa los permisos para poder usar esta opción</string>
    <string name="privacy_policies_title">Políticas de privacidad</string>
    <string name="privacy_policies">Al acceder con mi cuenta de correo acepto los terminos y condiciones asi como las politicas de privacidad</string>
    <string name="test_title">Bienvenido a \nChatRadar</string>
    <string name="test_description">Prueba de ChatRadar</string>
    <string name="enter">Continuar</string>
    <string name="forgot_password_detail">Agrega tu correo, para recuperar tu contraseña</string>
    <string name="forgot_password">Has olvidado tu contraseña</string>
    <string name="create_one_here">Crea una aquí</string>
    <string name="register">Registrar</string>
    <string name="forgot_password_button">¿Olvidaste la contraseña?</string>
    <string name="write_note">Escribir una nota</string>
    <string name="note">Nota</string>
    <string name="status_1_instructions">Para iniciar presione "Tomar"</string>
    <string name="status_2_instructions">Para continuar presione "¡Ya la termine!"</string>
    <string name="status_3_instructions">Hemos terminado</string>
    <string name="take">Tomar</string>
    <string name="already_finished_it">¡Ya la termine!</string>
    <string name="its_ready">¡Ya esta lista!</string>
    <string name="this_pizza_already_finished">Esta pizza ya fue terminada</string>
    <string name="notification_title">¡Hola! Tienes pizza que hacer</string>
    <string name="next">Continuar</string>
    <string name="previous">Previous</string>
    <string name="operation_details">ChatRadar</string>
    <string name="pay">Registrarme</string>
    <string name="registration_in_process">Tienes un registro en proceso, aceptar para continuar</string>
    <string name="configuration_of_pizzas">Datos de pizza</string>
    <string name="add_ingredient">Agregar ingrediente</string>
    <string name="add_size">Agregar tamaño</string>
    <string name="add_ingredients">Agregar ingrediente (Ej: Peperoni)</string>
    <string name="add_sizes">Selecciona tus tamaños que vendes (Chica a la grande)</string>
    <string name="do_you_want_to_log_out">¿Seguro que quieres cerrar sesión?</string>
    <string name="add_more_than_ingredients">Tienes que agregar al menos 1 ingrediente</string>
    <string name="write_an_ingredient">Escribe un ingrediente</string>
    <string name="add_more_than_one_size">Agregar más de un tamaño</string>
    <string name="register_free">Regístrate GRATIS</string>
    <string name="test_radar">Prueba RADAR</string>
    <string name="sending">Enviado</string>
    <string name="send">Enviando</string>
    <string name="please_wait">Espera un momento</string>
    <string name="default_notification_channel_id">default_notification_channel_id</string>
    <string name="enter_message">Enviar mensaje</string>
    <string name="online">En linea</string>
    <string name="select_a_file">Selecciona un archivo</string>
    <string name="shared_a_file">Compartir archivo</string>

</resources>
