<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.auth.ForgotPasswordFragment">

    <TextView
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/forgot_password"
        android:textColor="@color/black"
        android:textSize="22dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/headline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/forgot_password_detail"
        android:textColor="@color/black"
        android:textSize="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_et_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/enter_email"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headline">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>


    <RelativeLayout
        android:id="@+id/button_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@+id/email_et_layout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/email_et_layout"
        app:layout_constraintTop_toBottomOf="@+id/email_et_layout">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/forgot_password_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_orange_button"
            android:text="@string/enter"
            android:textAllCaps="false"
            android:textAppearance="@style/bodyBold16Text"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <ProgressBar
            android:id="@+id/forgot_pass_progress"
            style="?android:attr/progressBarStyle"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_centerInParent="true"
            android:layout_marginTop="16dp"
            android:elevation="10dp"
            android:indeterminateTint="@color/white"
            android:visibility="invisible" />

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>