<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout8"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <ImageView
                android:id="@+id/imageView12"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:scaleType="fitXY"
                android:src="@drawable/bg_orange"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView152"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:src="@drawable/ic_logo_clear"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/test_title"
                android:textAlignment="viewStart"
                android:textColor="@color/white"
                android:textSize="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/headline"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/test_description"
                android:textColor="@color/background_clr"
                android:textSize="14dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_text_input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/enter_email"
                app:endIconMode="clear_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView12">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_edit_text"
                    android:text="jose@gmail.com"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/pass_text_input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:hint="Contraseña"
                app:endIconMode="clear_text"
                app:layout_constraintEnd_toEndOf="@+id/email_text_input_layout"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/email_text_input_layout"
                app:layout_constraintTop_toBottomOf="@+id/email_text_input_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="qwerty123"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/forgot_pass_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/montserrat_medium"
                android:padding="5dp"
                android:text="@string/forgot_password_button"
                android:textAllCaps="false"
                android:textColor="@color/orange_color_1"
                android:textSize="16dp"
                app:layout_constraintEnd_toEndOf="@+id/email_text_input_layout"
                app:layout_constraintTop_toBottomOf="@+id/pass_text_input_layout" />

            <RelativeLayout
                android:id="@+id/button_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="45dp"
                app:layout_constraintEnd_toEndOf="@+id/email_text_input_layout"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/email_text_input_layout"
                app:layout_constraintTop_toBottomOf="@+id/forgot_pass_label">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/login_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_orange_button"
                    android:text="@string/enter"
                    android:textAllCaps="false"
                    android:textAppearance="@style/bodyBold16Text"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <ProgressBar
                    android:id="@+id/login_progress"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="16dp"
                    android:elevation="10dp"
                    android:indeterminateTint="@color/white"
                    android:visibility="invisible" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/register_button_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="@+id/email_text_input_layout"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/email_text_input_layout"
                app:layout_constraintTop_toBottomOf="@+id/button_layout">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/register_login_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_orange_button"
                    android:text="@string/register_free"
                    android:textAllCaps="false"
                    android:textAppearance="@style/bodyBold16Text"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <ProgressBar
                    android:id="@+id/register_login_progress"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="16dp"
                    android:elevation="10dp"
                    android:indeterminateTint="@color/white"
                    android:visibility="invisible" />

            </RelativeLayout>


            <TextView
                android:id="@+id/textView15"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="30dp"
                android:text="@string/privacy_policies"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/privacy_policies_layout" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/privacy_policies_layout"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="50dp"
                android:background="@drawable/bg_grey_edge"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/register_button_layout">

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:text="@string/privacy_policies_title"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>