<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_padding_20"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="@dimen/margin_padding_20"
                android:fontFamily="@font/montserrat_black"
                android:text="@string/register"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/font_30"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />


            <RelativeLayout
                android:id="@+id/relativeLayout"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imgProfile"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_user" />

                <ImageView
                    android:id="@+id/imgAddImage"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:src="@drawable/ic_add" />

            </RelativeLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/first_name_et_layout"
                style="@style/OutlinedRoundedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_padding_16"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="@dimen/margin_padding_16"
                android:clipChildren="false"
                android:hint="@string/enter_first_name"
                android:textColorHint="@color/black"
                app:boxStrokeColor="@color/black"
                app:counterEnabled="false"
                app:endIconMode="clear_text"
                app:helperTextEnabled="false"
                app:hintAnimationEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/first_name_et"
                    style="@style/bodyBlack14Text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/last_name_et_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_padding_16"
                android:layout_marginTop="@dimen/margin_padding_20"
                android:layout_marginEnd="@dimen/margin_padding_16"
                android:hint="@string/enter_last_name"
                android:textColorHint="@color/black"
                app:boxStrokeColor="@color/black"
                app:counterEnabled="false"
                app:endIconMode="clear_text"
                app:helperTextEnabled="false"
                app:hintAnimationEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/first_name_et_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/last_name_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_et_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_padding_16"
                android:layout_marginTop="@dimen/margin_padding_20"
                android:layout_marginEnd="@dimen/margin_padding_16"
                android:hint="@string/enter_email"
                android:textColorHint="@color/black"
                app:boxStrokeColor="@color/black"
                app:counterEnabled="false"
                app:endIconMode="clear_text"
                app:helperTextEnabled="false"
                app:hintAnimationEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/last_name_et_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/pass_et_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="@dimen/width_0"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_padding_20"
                android:hint="@string/password"
                android:textColorHint="@color/black"
                app:boxStrokeColor="@color/black"
                app:counterEnabled="false"
                app:endIconMode="clear_text"
                app:helperTextEnabled="false"
                app:hintAnimationEnabled="false"
                app:layout_constraintEnd_toEndOf="@+id/email_et_layout"
                app:layout_constraintStart_toStartOf="@+id/email_et_layout"
                app:layout_constraintTop_toBottomOf="@+id/email_et_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:id="@+id/button_layout"
                android:layout_width="@dimen/width_0"
                android:layout_height="@dimen/margin_padding_55"
                android:layout_marginStart="@dimen/margin_padding_5"
                android:layout_marginTop="@dimen/margin_padding_30"
                android:layout_marginEnd="@dimen/margin_padding_5"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/email_et_layout"
                app:layout_constraintStart_toStartOf="@+id/email_et_layout"
                app:layout_constraintTop_toBottomOf="@+id/pass_et_layout">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/register_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_orang_corners"
                    android:text="@string/next"
                    android:textAllCaps="false"
                    android:textAppearance="@style/bodyBlack14Text"
                    android:textColor="@color/white" />

                <ProgressBar
                    android:id="@+id/register_progress"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="@dimen/width_36"
                    android:layout_height="@dimen/height_36"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="@dimen/margin_padding_16"
                    android:elevation="@dimen/margin_padding_10"
                    android:indeterminateTint="@color/white"
                    android:visibility="invisible" />

            </RelativeLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>